--- a/JQMobile Template/index.html
+++ b/JQMobile Template/index.html
@@ -292,9 +292,9 @@
          	  <div data-role="fieldcontain">
          	  	   <label for="Add A Moment">*Choose A Moment</label>
          	  	  
-         	  	   <select name="Choose A Moment" id="Choose A Moment" data-native-menu="false" class="required">
-         	  	   	  <option data-placeholder="true">Please Select One</option>
-         	  	   	  <optgroup label="Choose A Moment">      
+         	  	   <select name="Choose A Moment" id="Choose A Moment" data-native-menu="false" class="required" >
+         	  	   	  <option data-placeholder="true" class="required">Please Select One</option>
+         	  	   	  <optgroup label="Choose A Moment"  class="required">      
          	  	   	     <option value="First Met">First Met</option>
          	  	   	     <option value="First Date">First Date</option>
          	  	   	     <option value="First Kiss">First Kiss</option>
@@ -335,7 +335,7 @@
          		  <div data-role="fieldcontain">
 						<label for="Start">Start Date: </label>
 						<input type="date" name="Start" id="start" placeholder="2012-10-1" />
-						Please select the start date of your moment.
+						<label>Please select the start date of your moment.</label>
 					</div>
 					 <div data-role="fieldcontain">
 						<label for="End">End Date: </label>
