fixed some of my validation code errors..

--- a/JQMobile Template/index.html
+++ b/JQMobile Template/index.html
@@ -373,7 +373,7 @@
          		       <input type="submit" value= "Reset" data-theme="d" />
          		  </div>  
          	</form>
-         	
+         	  <a href="#momenterrors" id="myerrors" data-rel="dialog" data-transition="pop">Open Errors</a>
          </div>
              	 <div data-role="footer" data-position="fixed">
 		      <div data-role="navbar">
@@ -388,6 +388,17 @@
           </div><!--/footer-->     
 
       </div>   
+                <div data-role="dialog" id="momenterrors" data-add-back-btn="true" >
+                	<div data-role="header" data-position="fixed">
+                		<h1>Missing Fields</h1>
+                	</div>
+                <div data-role="content">	
+                  <ul>
+                    <li>Test</li>
+                  </ul>
+                  </div>
+                  </div>  	
+
 
 		
 
