changed my main js code to this. $(document).on('pageinit',function(){

--- a/JQMobile Template/index.html
+++ b/JQMobile Template/index.html
@@ -359,7 +359,7 @@
 
          		 <div data-role="fieldcontain">
          		      <label for="ratemymoment">Rate My Moment: (1-10 scale)</label>
-         		      <input type="range" name="ratemymoment" id="ratemymoment"  placeholder="5"  value="1" min"0" max="10" data-highlight="true"/>
+         		      <input type="range" name="ratemymoment" id="ratemymoment"   value="1" min"0" max="10" data-highlight="true"/>
          		</div>  
 
                 <div data-role="fieldcontain">
