--- a/JQMobile Template/index.html
+++ b/JQMobile Template/index.html
@@ -67,7 +67,7 @@
      	     <div data-role="navbar">
 	             <ul>
 		            <li><a href="#about" data-icon="info">About Page</a></li>
-		              <li><a href="..users/johnson_bernice_project2_MiuB/JQMobile Template/index.html" data-icon="grid">Bronze App</a></li>
+		              <li><a href="https://github.com/bjohnson6/miu3bronzeapp/index.html" data-icon="grid">Bronze App</a></li>
 		            <li><a href="#git" data-icon="info">Git Links</a></li>
 		            
 		      <!--      <li><a href="#bronze" data-icon="star">Bronze App</a></li> -->
@@ -140,7 +140,7 @@
 	             <ul>
 		            <li><a href="#home" data-icon="home">Home</a></li>
 		             <li><a href="#about" data-icon="info">About Page</a></li>
-		              <li><a href="..users/johnson_bernice_project2_MiuB/JQMobile Template/index.html" data-icon="grid">Bronze App</a></li>
+		              <li><a href= "https://github.com/bjohnson6/miu3bronzeapp/index.html "data-icon="grid">Bronze App</a></li>
 		            <li><a href="#git" data-icon="info">Git Links</a></li>
 		            
 	              </ul>
